<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.planandgo.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/navigation_create_plan"
        android:name="com.example.planandgo.ui.createplan.CreatePlanFragment"
        android:label="@string/title_create_plan"
        tools:layout="@layout/fragment_create_plan"/>

    <fragment
        android:id="@+id/navigation_my_plan"
        android:name="com.example.planandgo.ui.myplan.MyPlanFragment"
        android:label="@string/title_my_plan"
        tools:layout="@layout/fragment_my_plan"/>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.planandgo.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>


</navigation>