<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:paddingBottom="64dp"
    tools:context=".ui.createplan.CreatePlanFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/asset_create_plan"
            android:layout_width="365dp"
            android:layout_height="200dp"
            android:src="@drawable/add_plan_asset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image_asset_create_plan" />

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_your_plan"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/asset_create_plan" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_dropdown_based_city"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_view">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_based_city"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:hint="@string/based_city"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_dropdown_destination_city"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_view">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_destination_city"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:hint="@string/city_destination"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:startIconDrawable="@drawable/baseline_money_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_dropdown_based_city">

            <AutoCompleteTextView
                android:id="@+id/total_budget_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/total_budget"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutDepartureTime"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            app:startIconDrawable="@drawable/baseline_calendar_month_24">

            <AutoCompleteTextView
                android:id="@+id/departure_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/departure_time"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutReturnTime"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:clickable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDepartureTime"
            app:startIconDrawable="@drawable/baseline_calendar_month_24">

            <AutoCompleteTextView
                android:id="@+id/return_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/return_time"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_dropdown_theme_destination"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutReturnTime">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_theme_destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/destination_theme"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnStartCreatePlan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_create_plan"
            android:textSize="16sp"
            android:padding="16dp"
            android:backgroundTint="@color/bottom_nav"
            android:textColor="@color/white"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_dropdown_theme_destination" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>